:sparkles: feat: add lint-staged configuration for pre-commit hook and improve event scrolling logic

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix"
   },
+  "lint-staged": {
+    "**/*.{js,jsx,tsx,ts,css,less,scss,sass}": [
+      "next lint --fix"
+    ]
+  },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
